syntax = "proto3";

package ai.verta.modeldb;
option go_package = "github.com/VertaAI/modeldb/protos/gen/go/protos/public/modeldb";

option java_multiple_files = true;
import "google/protobuf/struct.proto";
import "common/CommonService.proto";

message Feature {
    string name = 1;
}

// attributes
message GetAttributes {
    string id = 1;
    repeated string attribute_keys = 2;
    bool get_all = 3;

    message Response {
        repeated common.KeyValue attributes = 1;
    }
}

// TODO: make this update attribute
message AddAttributes {
    string id = 1;
    common.KeyValue attribute = 2;

    message Response {
        bool status = 1;
    }
}

message GetTags {
    string id = 1;

    message Response {
        repeated string tags = 1;
    }
}

// TODO: add bulk and get_all
message GetArtifacts {
    string id = 1;
    string key = 2;

    message Response {
        repeated common.Artifact artifacts = 1;
    }
}
